--- a/_css/login.css
+++ b/_css/login.css
@@ -1,7 +1,11 @@
-﻿body {
+﻿* {
+    font-family: 'Noto Sans Mono', 'Noto Sans TC';
+}
+
+body {
     background: linear-gradient(135deg, #0f2350 0%, #1a3b6b 50%, #2c5282 100%);
     min-height: 100vh;
-    font-family: 'Microsoft JhengHei', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /*font-family: 'Microsoft JhengHei', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
 }
 
 .login-container {
