--- a/_mp/mp_default.master
+++ b/_mp/mp_default.master
@@ -4,6 +4,9 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>農業保險基金*牛籍管理系統</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&family=Noto+Sans+TC:wght@400;900&display=swap" rel="stylesheet" />
     <script src="../../_js/bootstrap.bundle.js"></script>
     <script src="../../_js/jquery-3.7.1.js"></script>
     <script src="../../_js/jquery-ui.min.js"></script>
@@ -11,6 +14,7 @@
     <link href="../_css/bootstrap.css" rel="stylesheet" />
     <link href="../_css/fontawesome-all.css" rel="stylesheet" />
     <link href="../_css/mp_default.css" rel="stylesheet" />
+    <link href="../_css/control.css" rel="stylesheet" />
     <link href="../_css/jquery-ui.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="ContentPlaceHolder_head" runat="server"></asp:ContentPlaceHolder>
 </head>
@@ -47,7 +51,7 @@
                             <i class="fas fa-bars"></i>
                         </button>
 
-                        <span class="navbar-brand">牛籍管理系統</span>
+                        <span class="navbar-brand">財團法人農業保險基金 || 牛籍管理系統</span>
 
                         <div class="user-info">
                             <asp:LinkButton ID="LinkButton_userName" runat="server" CssClass="user-name" PostBackUrl="~/pages/System/MyAccount.aspx" Text="">
