--- a/_css/mp_default.css
+++ b/_css/mp_default.css
@@ -62,7 +62,7 @@ body {
 }
 
 .nav-link {
-    color: rgba(255,255,255,0.9);
+    /*color: rgba(255,255,255,0.9);*/
     padding: 12px 20px;
     border-radius: 0;
     transition: all 0.3s ease;
