--- a/_mp/mp_default.master
+++ b/_mp/mp_default.master
@@ -6,7 +6,7 @@
     <title>農業保險基金*牛籍管理系統</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&family=Noto+Sans+TC:wght@400;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <script src="../../_js/bootstrap.bundle.js"></script>
     <script src="../../_js/jquery-3.7.1.js"></script>
     <link href="../_css/bootstrap.css" rel="stylesheet" />
@@ -54,8 +54,7 @@
                             <asp:LinkButton ID="LinkButton_userName" runat="server" CssClass="user-name" PostBackUrl="~/pages/System/MyAccount.aspx" Text="">
                             </asp:LinkButton>
                             <asp:LinkButton ID="LinkButton_logout" runat="server" CssClass="btn btn-logout">
-                                <i class="fas fa-sign-out-alt me-1"></i>
-                                登出
+                                <i class="fas fa-sign-out-alt me-1"></i> 登出
                             </asp:LinkButton>
                            
                         </div>
