--- a/_css/control.css
+++ b/_css/control.css
@@ -30,10 +30,11 @@
 /** 列表樣式 **/
 .gv-tb {
     box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
+    padding:0px;
 }
 
 .gv {
-    width:100%;    
+    min-width:100%;    
     background-color:white;
     border:none;
 }
@@ -45,7 +46,7 @@
         font-weight: 600;
         border: none;
         padding: 15px 10px;
-        white-space: nowrap;
+        /*white-space: nowrap;*/
     }
 
     .gv tr td {
@@ -69,6 +70,7 @@
 /** 填寫表單樣式 **/
 .formCard {
     box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
+    margin-bottom:15px;
 }
 
     .formCard .card-header {
@@ -100,4 +102,16 @@
     .formCard .card-footer .msg {
         text-align:center;
         color:tomato;
+    }
+
+    .formCard .card-header.green {
+        background: linear-gradient(135deg, #316745, #47885e);
+    }
+
+    .formCard .card-header.orange {
+        background: linear-gradient(135deg, #e17b34, #e49e61);
+    }
+
+    .formCard .card-header.red {
+        background: linear-gradient(135deg, #9e3d3f, #b7282e);
     }
