--- a/_mp/mp_default.master
+++ b/_mp/mp_default.master
@@ -84,7 +84,8 @@
 
                 <!-- Footer -->
                 <footer class="footer">
-                    <p class="mb-0">Copyright © 2025 Taiwan Agricultural Insurance Fund</p>
+                    <p class="mb-0">Copyright © 2025 Taiwan Agricultural Insurance Fund<br />
+                        承辦單位：農險基金(02)2396-2381 || 系統建置：大武科技(02)2781-5085</p>
                 </footer>
             </div>
         </div>
