--- a/_css/control.css
+++ b/_css/control.css
@@ -1,7 +1,7 @@
 ﻿/** 查詢條件樣式 **/
 .queryBox {
     /*border: 1px solid black;*/
-    border-radius: 12px 12px;
+    border-radius: 5px 5px;
     background: linear-gradient(135deg, #0f2350, #1a3b6b);
     padding-bottom: 10px;
     margin-bottom: 30px;
@@ -23,8 +23,8 @@
         margin: 0px 0px;
         padding: 10px 5px;
     }
-        .queryBox-body .row .col label {
-            /*font-weight:700;*/
+        .queryBox-body .row .col label, .queryBox-body .row [class^="col-"] label {
+            font-weight: 500;
         }
 
 /** 列表樣式 **/
@@ -80,6 +80,7 @@
         font-size: 1.25rem;
         font-weight: 600;
     }
+
     .formCard .card-body {
         background-color:white;
     }
@@ -105,6 +106,8 @@
     }
 
     .formCard .card-footer {
+        text-align:center;
+        padding:0px 0px 15px 0px;
         background-color:white;
         border-top:none;
     }
@@ -119,6 +122,24 @@
 
     .formCard .card-header.red {
         background: linear-gradient(135deg, #9e3d3f, #b7282e);
+    }
+
+/*表格樣式*/
+.tb {
+    width:100%;
+    border:none;
+    border-collapse:collapse;
+    background:white;
+}
+
+    .tb tr th, .tb tr td {
+        text-align: center;
+        padding:10px 10px;
+        border:1px solid #e1e1e1;
+    }
+
+    .tb tr th {
+        background-color: #f8f9fa;
     }
 
 /*文字樣式*/
